--- a/css/style.css
+++ b/css/style.css
@@ -97,7 +97,7 @@ footer .container,
 header {
     text-align: center;
     height: 100%;
-    padding-top: 230px;
+    padding: 80px 0;
 }
 header h1 {
     font-size: 2.5em;
@@ -116,15 +116,7 @@ header p {
     padding-bottom: 10px;
 }
 header .mouse {
-    margin-left: -20px;
-    position: absolute;
-    text-align: center;
-    bottom: 0;
-    left: 50%;
-    animation: wobbleArrow 1s ease-in-out 0s infinite alternate;
-    -webkit-animation: wobbleArrow 1s ease-in-out 0s infinite alternate;
-    -moz-animation: wobbleArrow 1s ease-in-out 0s infinite alternate;
-    -o-animation: wobbleArrow 1s ease-in-out 0s infinite alternate;
+    margin-top: 50px;
 }
 header .mouse a {
     color: #F9F9F9;
@@ -174,7 +166,7 @@ header .mouse a {
 }
 .countdown div {
     display: inline-block;
-    margin: 0 34px;
+    margin: 0 14px;
 }
 /* ================================= */
 /* :::::::::: 4. Services :::::::::: */
@@ -661,7 +653,6 @@ footer a:hover {
     header .logo img {
         width: 15%;
         height: auto;
-        float: left;
         margin: 10px;
     }
     .mouse {
@@ -687,7 +678,7 @@ footer a:hover {
         width: auto!important;
     }
     header {
-        padding-top: 15px;
+        padding: 70px 0;
     }
 }
 @media only screen and (max-width: 540px) {
